TAAS-79: ensure OCHA Services links are always visible
A reset rule was making them invisible on hover

--- a/assets/sass/cd/cd-header/_cd-ocha.scss
+++ b/assets/sass/cd/cd-header/_cd-ocha.scss
@@ -148,6 +148,7 @@
 
     &:hover,
     &:focus {
+      color: $cd-white;
       border-color: $cd-bright-blue;
     }
   }
